lucia-macros/tests/ui/error_enum/bad_field.stderr
error: Field attributes must be annotated as `#[pkg::field(name = "SomeName")]`
 --> tests/ui/error_enum/bad_field.rs:8:20
  |
8 |   pub struct Req(#[pkg::bar] i32);
  |                    ^^^

error: expected `name`
  --> tests/ui/error_enum/bad_field.rs:18:31
   |
18 |   pub struct Req(#[pkg::field(foo = "1111")] i32);
   |                               ^^^
